--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card {
+    @apply block w-screen pb-5
+}
+
+.card-lastchild {
+    @apply block w-screen
+}
+
+.card-content {
+    @apply h-24 bg-[#202C5F] flex items-center gap-x-3 px-2
+}
+
+.card-image {
+    @apply w-1/3 flex items-center
+}
+
+.card-text {
+    @apply text-white w-2/3
+}
