--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,22 +4,26 @@
 
 .card {
     @apply block w-11/12 pb-5 mx-auto
+    sm:w-3/4
 }
 
 .card-lastchild {
-    @apply block w-11/12 mx-auto
+    @apply pb-0
 }
 
 .card-content {
-    @apply h-24 bg-[#202C5F] flex items-center gap-x-3 px-2
+    @apply h-24 bg-[#202C5F] flex items-center gap-x-3 px-2 rounded-md
+    sm:justify-center sm:h-24
 }
 
 .card-image {
-    @apply w-1/3 flex items-center
+    @apply w-1/4 flex items-center
+    sm:justify-center
 }
 
 .card-text {
     @apply text-white w-2/3
+    sm:w-1/2
 }
 
 .card-title {
