--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,7 +18,7 @@
 }
 
 .card-image {
-    @apply w-1/2 flex items-center
+    @apply w-1/2 flex items-center justify-center
     sm:justify-center sm:w-1/4;
 }
 
