--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,28 +13,33 @@
 }
 
 .card-content {
-    @apply h-24 bg-main-bg flex items-center gap-x-3 px-2 rounded-md transition delay-75 hover:bg-main-bg-hover
-    sm:justify-center sm:h-24;
+    @apply bg-main-bg flex items-center gap-x-3 px-2 py-2 rounded-md transition delay-75 hover:bg-main-bg-hover
+    sm:justify-center sm:py-0;
 }
 
 .card-image {
     @apply w-1/2 flex items-center justify-center
-    sm:justify-center sm:w-1/4;
+    sm:justify-center sm:w-1/3;
 }
 
 .card-text {
     @apply text-white text-sm w-2/3
-    sm:w-1/2 sm:text-base
-    md:text-lg
+    sm:w-1/2
 }
 
 .card-title {
     @apply font-bold
-    lg:text-xl;
+    sm:text-base
+    md:text-lg
+    lg:text-xl
+    xl:text-2xl
+    2xl:text-3xl
 }
 
 .card-desc {
-    @apply text-sm;
+    @apply text-sm
+    xl:text-base
+    2xl:text-lg
 }
 
 /* submenu */
